		component instantiations (netlists) without undue slowdown.
		Added gcc -Wformat and -Wformat-security related fixes.
		Update hier_decompress_flagged so it can also decompress into
		its own static buffer in order to speed up temporary usage
		cases.
		Fix FST reader iterator to work better with --begin flag.
		Fixed missing facname decompression for FST files on
		single trace import (backup case that should never happen).
		Added support for user-specified timescale ruler using the
		ruler_origin and ruler_step rc variables.
		Added "/View/Define Time Ruler Marks" menu option.
		Removed indirect file support as is unneeded for 64-bit.
		Removed obsolete CVS modification log comments.
		Handle vcd saver case of dot at end of signal name.
3.3.23	01jul11	Fixed ItemFactory callbacks as their argument lists did
		not reflect the correct callback argument type/order
		for callback_type=1.  This is a longstanding hidden
		bug.  (Would prevent pattern search from working on
		64-bit big-endian architectures.)
		Fixed broken "replace" signal option.
3.3.24	03aug11	Improve the searching for the TCL libraries (when using 
		stubs).
		Fixed bug where Tcl_GetString was substituted with
		brace removal preprocessing when unnecessary (would break
		addSignalsFromList, etc.)
3.3.25	15sep11	Replaced calloc_2 with histent_calloc in loaders where
		applicable.
		Updated tcl.m4 so /usr/lib64 can be automatically used.
		Fixed TR_ANALOG_STEP line clipping problem.
		Checked in fix for modelsim signal bit nets that are
		defined as [0] as some tools emit signals without the
		[0] and it causes savefile compatibility problems.
		Add visible filter pattern in fileselbox() as well as
		selectable "*" pattern overrides.
		Added custom filters to GtkFileChooser dialogue.
		Fix in lxt2_read.c/.h for negative msb/lsb indices.
		Fix in vzt_read.c/.h for negative msb/lsb indices.
3.3.26	25sep11	Removed restrictions for twinwave on OSX.
		OSX compile fixes for Tcl detection.