@@ -1040,3 +1040,4 @@
 		Fix in vzt_read.c/.h for negative msb/lsb indices.
 3.3.26	25sep11	Removed restrictions for twinwave on OSX.
 		OSX compile fixes for Tcl detection.
+		Printf warning fixes.
